<resources>
    <string name="app_name">Bicycle City</string>
    <string name="geo_api_server_key">AIzaSyC2jsENnu-uLEhXNkXwnIdM5e_qzKCpBO8</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="feed">Feed</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="group_rides">Group Rides</string>
    <string name="competitions">Competitions</string>
    <string name="map">Map</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <string name="tap_to_pick_start_point">Tap to pick start point</string>
    <string name="tap_to_pick_finish_point">Tap to pick finish point</string>
    <string name="tap_to_pick_date_or_time">Tap to pick date or time</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="create_group_ride">Create Group Ride</string>
    <string name="mins_placeholder">%d mins</string>
    <string name="km_placeholder">%.1f km</string>
    <string name="loading_failed">Loading failed</string>
    <string name="title_activity_create_group_ride">Create group ride</string>
    <string name="title_activity_create_group_ride_route">Select the route</string>
    <string name="title_activity_create_competition">Create competition</string>
    <string name="title_activity_competition_result">Competition results</string>
    <string name="select">Select</string>
    <string name="choose_your_average_speed_usually">Choose your average speed usually</string>

    <string-array name="avg_speed">
        <item>10 km/h</item>
        <item>15 km/h</item>
        <item>20 km/h</item>
        <item>25 km/h</item>
        <item>30 km/h</item>
        <item>35 km/h</item>
        <item>40 km/h</item>
        <!--<item>over 35 km/h</item>-->
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="failed">Failed</string>
    <string name="creating_route_failed">Creating route failed</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="required">Required</string>
    <string name="distance">Distance</string>
    <string name="approximate_time">Approximate time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="riders">Riders</string>
    <string name="riders_count">Riders :</string>
    <string name="creator">Creator:</string>
    <string name="user_full_name_placeholder">%s %s</string>
    <string name="markers_type">Markers type</string>
    <string name="choose_bicycle_type">Choose bicycle type</string>
    <string name="choose_your_training_level">Choose your training level</string>
    <string name="make_your_competition_private">Make your competition private?</string>
    <string name="access_code_placeholder">Access code: %s</string>
    <string name="continue_creating">Continue creating</string>
    <string name="value_was_copied">%s was copied to clipboard</string>
    <string name="beginner">Beginner</string>
    <string name="advanced_beginner">Advanced Beginner</string>
    <string name="amateur">Amateur</string>
    <string name="everyday_rider">Everyday rider</string>
    <string name="professional">Professional</string>
    <string name="prize">Prize</string>
    <string name="prize_for_winner">Prize for winner</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="start_point">Start Point</string>
    <string name="finish_point">Finish Point</string>
    <string name="recommended_training_level">Recommended training level :</string>
    <string name="recommended_bicycle_type">Recommended bicycle type :</string>

    <string-array name="marker_types">
        <item>All</item>
        <item>Parking</item>
        <item>Rent</item>
        <item>Workshop</item>
    </string-array>

    <string-array name="bicycle_types">
        <item>Road</item>
        <item>Mountain</item>
        <item>Track</item>
        <item>Time Trial</item>
    </string-array>
</resources>
