<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    tools:context="ui.activity.competition.CreateCompetitionActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/choose_bicycle_type"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/description_input_layout"
            app:layout_constraintTop_toBottomOf="@id/description_input_layout" />

        <Spinner
            android:id="@+id/bicycle_type_spinner"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="@id/title_input_layout"
            app:layout_constraintStart_toStartOf="@id/title_input_layout"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/choose_your_training_level"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/description_input_layout"
            app:layout_constraintTop_toBottomOf="@id/bicycle_type_spinner" />

        <SeekBar
            android:id="@+id/training_level_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="4"
            app:layout_constraintEnd_toEndOf="@id/title_input_layout"
            app:layout_constraintStart_toStartOf="@id/title_input_layout"
            app:layout_constraintTop_toBottomOf="@id/seekbar_hint1" />

        <TextView
            android:id="@+id/seekbar_hint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/beginner"
            app:layout_constraintStart_toStartOf="@id/training_level_seekbar"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <TextView
            android:id="@+id/seekbar_hint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/advanced_beginner"
            app:layout_constraintEnd_toStartOf="@+id/seekbar_hint4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@id/training_level_seekbar"
            app:layout_constraintTop_toBottomOf="@id/training_level_seekbar" />

        <TextView
            android:id="@+id/seekbar_hint3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/amateur"
            app:layout_constraintEnd_toEndOf="@id/training_level_seekbar"
            app:layout_constraintStart_toStartOf="@id/training_level_seekbar"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <TextView
            android:id="@+id/seekbar_hint4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday_rider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seekbar_hint2"
            app:layout_constraintTop_toBottomOf="@id/training_level_seekbar" />

        <TextView
            android:id="@+id/seekbar_hint5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/professional"
            app:layout_constraintEnd_toEndOf="@id/training_level_seekbar"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/make_your_competition_private"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/title_input_layout"
            app:layout_constraintTop_toBottomOf="@id/seekbar_hint2" />

        <CheckBox
            android:id="@+id/private_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView4" />

        <TextView
            android:id="@+id/access_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/access_code_placeholder"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/copy_code_button"
            app:layout_constraintStart_toStartOf="@id/title_input_layout"
            app:layout_constraintTop_toTopOf="@id/copy_code_button"
            tools:text="Access code: A1B2C3D4"
            tools:visibility="visible" />

        <Button
            android:id="@+id/copy_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="8dp"
            android:text="@android:string/copy"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/private_checkbox"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/prize_for_winner"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/title_input_layout"
            app:layout_constraintTop_toBottomOf="@id/copy_code_button" />

        <CheckBox
            android:id="@+id/prize_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView5" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/prize_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:hint="@string/prize"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            tools:visibility="visible">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prize_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/time_text"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prize_input_layout"
            tools:text="20 April, 2018" />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_text"
            app:layout_constraintTop_toBottomOf="@id/prize_input_layout"
            tools:text="15:00" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_pick_date_or_time"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_text" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_picker" />

        <Button
            android:id="@+id/select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/select"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_picker" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
